moved Dockerfile ARG after FROM

--- a/streampipes-backend/Dockerfile
+++ b/streampipes-backend/Dockerfile
@@ -14,7 +14,7 @@
 # limitations under the License.
 
 ARG BASE_IMAGE=adoptopenjdk/openjdk8-openj9:alpine-slim
-FROM ${BASE_IMAGE}
+FROM $BASE_IMAGE
 
 EXPOSE 8030
 ENV CONSUL_LOCATION consul
