STREAMPIPES-66: Multi-arch docker images

--- a/streampipes-processors-statistics-flink/Dockerfile
+++ b/streampipes-processors-statistics-flink/Dockerfile
@@ -13,11 +13,13 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-FROM adoptopenjdk/openjdk8-openj9:alpine-slim
+ARG BASE_IMAGE=adoptopenjdk/openjdk8-openj9:alpine-slim
+FROM $BASE_IMAGE
 
-EXPOSE 8090
 ENV CONSUL_LOCATION consul
 
-ADD ./target/streampipes-processors-statistics-flink.jar  /streampipes-processing-element-container.jar
+EXPOSE 8090
+
+COPY target/streampipes-processors-statistics-flink.jar  /streampipes-processing-element-container.jar
 
 ENTRYPOINT ["java", "-jar", "/streampipes-processing-element-container.jar"]
