STREAMPIPES-66: Multi-arch docker images

--- a/cli/services/couchdb/docker-compose.yml
+++ b/cli/services/couchdb/docker-compose.yml
@@ -16,7 +16,7 @@
 version: "2"
 services:
   couchdb:
-    image: couchdb:2.3.1
+    image: fogsyio/couchdb:2.3.1
     ports:
       - "5984:5984"
     volumes:
