--- a/cli/services/activemq/docker-compose.yml
+++ b/cli/services/activemq/docker-compose.yml
@@ -16,7 +16,7 @@
 version: "2"
 services:
   activemq:
-    image: streampipes/activemq:5.15.9
+    image: fogsyio/activemq:5.15.9
     ports:
       - "61616:61616"
       - "61614:61614"
