--- a/cli/services/influxdb/docker-compose.yml
+++ b/cli/services/influxdb/docker-compose.yml
@@ -16,7 +16,7 @@
 version: "2"
 services:
   influxdb:
-    image: influxdb:1.7
+    image: fogsyio/influxdb:1.7
     ports:
       - "8083:8083"
       - "8086:8086"
