STREAMPIPES-66: Multi-arch docker images

--- a/helm-chart/Chart.yaml
+++ b/helm-chart/Chart.yaml
@@ -14,11 +14,11 @@
 # limitations under the License.
 
 apiVersion: v1
-appVersion: "0.65.0"
+appVersion: "0.65.1-SNAPSHOT"
 description: Self-Service Data Analytics for the Industrial IoT
 name: streampipes-helm-chart
-home: https://streampipes.org
-version: 0.65.0
+home: https://streampipes.apache.org
+version: 0.65.1-SNAPSHOT
 icon: https://avatars1.githubusercontent.com/u/33908576
 maintainers:
   - name: Dominik Riemer
