--- a/helm-chart/templates/mandatory-external-services/couchdb/couchdb-deployment.yaml
+++ b/helm-chart/templates/mandatory-external-services/couchdb/couchdb-deployment.yaml
@@ -33,7 +33,7 @@ spec:
             claimName: couchdb-pvc
       containers:
         - name: couchdb
-          image: couchdb:{{ .Values.external.couchdbVersion }}
+          image: fogsyio/couchdb:{{ .Values.external.couchdbVersion }}
           imagePullPolicy: {{ .Values.pullPolicy }}
           ports:
             - containerPort: 5984
