--- a/installer/templates/docker-compose.lite.yml
+++ b/installer/templates/docker-compose.lite.yml
@@ -138,7 +138,7 @@ services:
 #### StreamPipes services
 
   backend:
-    image: "${SP_REGISTRY_MAIN}/backend:${SP_VERSION}"
+    image: "${SP_DOCKER_REGISTRY}/backend:${SP_BACKEND_VERSION}"
     depends_on:
       - consul
       - couchdb
@@ -150,7 +150,7 @@ services:
       spnet:
 
   connect-master:
-    image: "${SP_REGISTRY_MAIN}/streampipes-connect-container:${SP_VERSION}"
+    image: "${SP_DOCKER_REGISTRY}/streampipes-connect-container:${SP_BACKEND_VERSION}"
     depends_on:
       - consul
       - couchdb
@@ -166,7 +166,7 @@ services:
       spnet:
 
   connect-worker-main:
-    image: "${SP_REGISTRY_CONNECT}/streampipes-connect-worker:${SP_VERSION}"
+    image: "${SP_DOCKER_REGISTRY}/connect-worker:${SP_BACKEND_VERSION}"
     depends_on:
       - consul
       - couchdb
@@ -181,7 +181,7 @@ services:
       spnet:
 
   nginx:
-    image: "${SP_REGISTRY_UI}/ui:${SP_UI_VERSION}"
+    image: "${SP_DOCKER_REGISTRY}/ui:${SP_BACKEND_VERSION}"
     ports:
       - "80:80"
     depends_on:
@@ -197,14 +197,14 @@ services:
 #### Lite version pipeline elements
 
   pipeline-elements-all-jvm:
-    image: "${SP_REGISTRY_PE}/pipeline-elements-all-jvm:${SP_VERSION}"
+    image: "${SP_DOCKER_REGISTRY}/pipeline-elements-all-jvm:${SP_PE_VERSION}"
     depends_on:
       - "consul"
     networks:
       spnet:
 
   sources-watertank-simulator:
-    image: "${SP_REGISTRY_PE}/sources-watertank-simulator:${SP_VERSION}"
+    image: "${SP_DOCKER_REGISTRY}/sources-watertank-simulator:${SP_PE_VERSION}"
     depends_on:
       - "consul"
       - "kafka"
