--- a/installer/templates/.env
+++ b/installer/templates/.env
@@ -14,10 +14,6 @@
 # limitations under the License.
 
 SP_HOST=kafka
-SP_KAFKA_HOST=kafka
-SP_VERSION=0.65.0
-SP_UI_VERSION=0.65.0
-SP_REGISTRY_MAIN=streampipes
-SP_REGISTRY_PE=streampipes
-SP_REGISTRY_CONNECT=streampipes
-SP_REGISTRY_UI=streampipes
+SP_BACKEND_VERSION=0.65.1-SNAPSHOT
+SP_PE_VERSION=0.65.1-SNAPSHOT
+SP_DOCKER_REGISTRY=apachestreampipes
