updated helm chart, moved influxdb to mandatory external services for SP data lake

--- a/helm-chart/templates/mandatory-external-services/influxdb/influxdb-service.yaml
+++ b/helm-chart/templates/mandatory-external-services/influxdb/influxdb-service.yaml
@@ -13,15 +13,23 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-{{- if eq .Values.deployment "full" }}
 apiVersion: v1
-kind: PersistentVolumeClaim
+kind: Service
 metadata:
-  name: influxdb-pvc
+  name: influxdb
 spec:
-  accessModes:
-    - ReadWriteOnce
-  resources:
-    requests:
-      storage: 5Gi
-{{- end}}
+  selector:
+    app: influxdb
+  ports:
+    - name: main
+      protocol: TCP
+      port: 8083
+      targetPort: 8083
+    - name: api
+      protocol: TCP
+      port: 8086
+      targetPort: 8086
+    - name: internal
+      protocol: TCP
+      port: 8090
+      targetPort: 8090
