--- a/helm-chart/templates/mandatory-external-services/influxdb/influxdb-pvc.yaml
+++ b/helm-chart/templates/mandatory-external-services/influxdb/influxdb-pvc.yaml
@@ -13,25 +13,13 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-{{- if eq .Values.deployment "full" }}
 apiVersion: v1
-kind: Service
+kind: PersistentVolumeClaim
 metadata:
-  name: influxdb
+  name: influxdb-pvc
 spec:
-  selector:
-    app: influxdb
-  ports:
-    - name: main
-      protocol: TCP
-      port: 8083
-      targetPort: 8083
-    - name: api
-      protocol: TCP
-      port: 8086
-      targetPort: 8086
-    - name: internal
-      protocol: TCP
-      port: 8090
-      targetPort: 8090
-{{- end}}
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 5Gi
