--- a/helm-chart/templates/streampipes-core/connect-worker/connect-worker-deployment.yaml
+++ b/helm-chart/templates/streampipes-core/connect-worker/connect-worker-deployment.yaml
@@ -39,7 +39,7 @@ spec:
           command: ["sh", "-c", "for i in $(seq 1 300); do nc -zvw1 connect-master 8099 && exit 0 || sleep 3; done; exit 1"]
       containers:
         - name: connect-worker
-          image: {{ .Values.streampipes.registry }}/streampipes-connect-worker:{{ .Values.streampipes.version }}
+          image: {{ .Values.streampipes.registry }}/connect-worker:{{ .Values.streampipes.version }}
           imagePullPolicy: {{ .Values.pullPolicy }}
           env:
             - name: SP_CONNECT_CONTAINER_MASTER_HOST
@@ -50,5 +50,3 @@ spec:
               value: kafka
           ports:
             - containerPort: 8098
-      imagePullSecrets:
-        - name: gitlab-registry
