--- a/helm-chart/templates/streampipes-core/ui/nginx-deployment.yaml
+++ b/helm-chart/templates/streampipes-core/ui/nginx-deployment.yaml
@@ -51,7 +51,7 @@ spec:
             - containerPort: 80
         # This is necessary because a custom dns resolver is set in nginx default conf
         - name: dnsmasq
-          image: janeczku/go-dnsmasq:release-1.0.7
+          image: fogsyio/go-dnsmasq:1.0.7
           args:
             - --listen
             - "127.0.0.11:53"
@@ -59,5 +59,3 @@ spec:
             - --append-search-domains
             - --hostsfile=/etc/hosts
             - --verbose
-      imagePullSecrets:
-        - name: gitlab-registry
